# docs/swagger.yaml
@@ -160,6 +160,17 @@ definitions:
       type:
         type: string
     type: object
+  proto.GeneratePaymentURLResponse:
+    properties:
+      error:
+        $ref: '#/definitions/proto.Error'
+      payment_id:
+        type: string
+      success:
+        type: boolean
+      url:
+        type: string
+    type: object
   proto.GetInventoryLogsResponse:
     properties:
       error:
@@ -179,6 +190,8 @@ definitions:
     type: object
   proto.GetOrderResponse:
     properties:
+      created_at:
+        type: integer
       customer_id:
         type: string
       error:
@@ -191,10 +204,16 @@ definitions:
         type: string
       prescription_url:
         type: string
+      shipping_cost:
+        type: number
       status:
         type: string
+      subtotal:
+        type: number
       success:
         type: boolean
+      updated_at:
+        type: integer
     type: object
   proto.GetPaymentResponse:
     properties:
@@ -349,6 +368,8 @@ definitions:
     type: object
   proto.Order:
     properties:
+      created_at:
+        type: integer
       customer_id:
         type: string
       items:
@@ -359,8 +380,14 @@ definitions:
         type: string
       prescription_url:
         type: string
+      shipping_cost:
+        type: number
       status:
         type: string
+      subtotal:
+        type: number
+      updated_at:
+        type: integer
     type: object
   proto.OrderItem:
     properties:
@@ -1182,6 +1209,50 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: Get an order
+      tags:
+      - Orders
+  /api/v1/orders/{id}/payment:
+    post:
+      consumes:
+      - application/json
+      description: Generates a new payment URL for an order
+      parameters:
+      - description: Bearer token
+        in: header
+        name: Authorization
+        required: true
+        type: string
+      - description: Order ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/proto.GeneratePaymentURLResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/handlers.ErrorResponse'
+      security:
+      - ApiKeyAuth: []
+      summary: Generate a new payment URL
       tags:
       - Orders
   /api/v1/payments/{id}:
