# internal/routes/order_route.go
@@ -8,13 +8,14 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-func RegisterOrderRoutes(r *gin.RouterGroup, cfg *config.Config, authClient grpc.AuthClient, orderClient grpc.OrderClient) {
+func RegisterOrderRoutes(r *gin.RouterGroup, cfg *config.Config, authClient grpc.AuthClient, orderClient grpc.OrderClient, paymentClient grpc.PaymentClient) {
 	r.Use(middleware.AuthMiddleware(authClient))
 	{
 		r.POST("/orders", handlers.PlaceOrder(cfg, orderClient))
 		r.GET("/orders", handlers.ListCustomersOrders(orderClient))
-		r.GET("/orders/:id", handlers.GetOrder(orderClient))
+		r.GET("/orders/:id", handlers.GetOrder(orderClient, paymentClient))
 		r.PUT("/orders/:id", handlers.UpdateOrderStatus(orderClient))
+		r.POST("/orders/:id/payment", handlers.GenerateNewPaymentUrl(orderClient))
 	}
 
 	admin := r.Group("/admin")
@@ -22,7 +23,7 @@ func RegisterOrderRoutes(r *gin.RouterGroup, cfg *config.Config, authClient grpc
 	admin.Use(middleware.RBACMiddleware("admin"))
 	{
 		admin.GET("/orders", handlers.ListAllOrders(orderClient))
-		admin.GET("/orders/:id", handlers.GetOrder(orderClient))
+		admin.GET("/orders/:id", handlers.GetOrder(orderClient, paymentClient))
 		admin.PUT("/orders/:id", handlers.UpdateOrderStatus(orderClient))
 	}
 }
